add recent note

--- a/Linux/网络.md
+++ b/Linux/网络.md
@@ -1,10 +1,10 @@
 [TOC]
 
-# 字节序
+# 网络基础
 
 
 
-## 大小端
+## 字节序（大小端）
 
 ```
 port:8000 小端：0x1f80 大端:0x801f（地址左高右低，平时写的是小端）
@@ -93,4 +93,60 @@ ssize_t sendmsg(int sockfd, const struct msghdr *msg, int flags);
 
 
 
-*参考资料：UNIX高级环境编程 P487，<https://www.bilibili.com/video/BV1Xp4y1S7BL>*
+# 网络协议
+
+<img src="C:\Users\玮\Desktop\Note\Linux\appendix\osi7.png" style="zoom:50%;" />
+
+
+
+## IP
+
+
+
+## TCP
+
+
+
+### 三次握手
+
+<img src="C:\Users\玮\Desktop\Note\Linux\appendix\3shake.png" style="zoom:50%;" />
+
+简介：
+
+- 第一次：客户机发含SYN位，seq = x的包到服务器。（客 -> SYN_SEND）
+
+- 第二次：服务器发含SYN位和ACK位，seq = y，ack = x + 1的包到客户机。（服 -> SYN_RECV）
+
+- 第三次：客户机发送含ACK位，ack = y + 1的包到服务器。（客 -> ESTABLISH，服 -> ESTABLISH）
+
+  
+
+### 四次挥手
+
+<img src="C:\Users\玮\Desktop\Note\Linux\appendix\4wave.png" style="zoom:50%;" />
+
+简介：
+
+- 第一次：客户机发含FIN位，seq = u的包到服务器。（客 -> FIN_WAIT_1）
+- 第二次：服务器发含ACK位，ack = u + 1的包到服务器。（服 -> CLOSE_WAIT，客 -> FIN_WAIT_2）
+  - 此处有等待
+- 第三次：服务器发含FIN，seq = w的包到客户机。（服 -> LAST_ACK，客 -> TIME_WAIT）
+  - 此处有等待
+- 第四次：客户机发含ACK位，ack = w + 1的包到客户机。（服 -> CLOSED）
+
+
+
+
+
+## HTTP
+
+
+
+
+
+------
+
+*参考资料：*
+
+- *UNIX高级环境编程 P487*
+- *<https://www.bilibili.com/video/BV1Xp4y1S7BL>*
