--- a/Linux/网络.md
+++ b/Linux/网络.md
@@ -95,7 +95,7 @@ ssize_t sendmsg(int sockfd, const struct msghdr *msg, int flags);
 
 # 网络协议
 
-<img src="C:\Users\玮\Desktop\Note\Linux\appendix\osi7.png" style="zoom:50%;" />
+<img src="appendix\osi7.png" style="zoom:50%;" />
 
 
 
@@ -109,7 +109,7 @@ ssize_t sendmsg(int sockfd, const struct msghdr *msg, int flags);
 
 ### 三次握手
 
-<img src="C:\Users\玮\Desktop\Note\Linux\appendix\3shake.png" style="zoom:50%;" />
+<img src="appendix\3shake.png" style="zoom:50%;" />
 
 简介：
 
@@ -123,7 +123,7 @@ ssize_t sendmsg(int sockfd, const struct msghdr *msg, int flags);
 
 ### 四次挥手
 
-<img src="C:\Users\玮\Desktop\Note\Linux\appendix\4wave.png" style="zoom:50%;" />
+<img src="appendix\4wave.png" style="zoom:50%;" />
 
 简介：
 
