--- a/Linux/网络.md
+++ b/Linux/网络.md
@@ -1,6 +1,6 @@
 [TOC]
 
-# 网络基础
+# 网络编程
 
 
 
@@ -17,10 +17,6 @@ uint16_t ntohs(uint16_t netint16)  // net->host
 ```
 
 简介：小端，低字节->低地址；大端，低字节->高地址
-
-
-
-*参考资料：UNIX高级环境编程 P477，<https://www.bilibili.com/video/BV1DA411q7ip>*
 
 
 
@@ -47,10 +43,6 @@ const char *inet_ntop(int domain,	// ipv4 or ipv6
 
 
 
-*参考资料：UNIX高级环境编程 P478，<https://www.bilibili.com/video/BV1DA411q7ip>*
-
-
-
 ## 套接字（Socket：网络IPC）
 
 ```
@@ -59,8 +51,8 @@ const char *inet_ntop(int domain,	// ipv4 or ipv6
 int socket (int domain,	// ipv4: AF_INET ipv6: AF_INET6
 			int type,	// TCP: SOCK_STREAM UDP: SOCK_DGRAM
 			int protocal);	// 通常为0
-int close (int fd)； // 关闭，共享线程还能用
-int shutdown(int sockfd, int how); // 彻底关闭，所有线程都不能用，可选关读or写orAll
+int close (int fd)； // 关闭输入/输出流，关闭了sockfd，socket连接未破坏
+int shutdown(int sockfd, int how); // 半关闭，所有线程都不能用，读or写orAll，破坏socket连接
 
 // 绑定套接字和本地ip地址
 int bind(int sockfd, const struct sockaddr *addr, socklen_t len); // addr{family，ip，port}
@@ -89,7 +81,19 @@ ssize_t sendmsg(int sockfd, const struct msghdr *msg, int flags);
 
 ```
 
-简介：
+<img src="appendix\tcp_socket.png" style="zoom: 80%;" />
+
+
+
+------
+
+*参考资料：*
+
+- UNIX高级环境编程 P477，P487
+- https://www.bilibili.com/video/BV1DA411q7ip
+- <https://www.bilibili.com/video/BV1Xp4y1S7BL>
+
+
 
 
 
@@ -97,15 +101,15 @@ ssize_t sendmsg(int sockfd, const struct msghdr *msg, int flags);
 
 <img src="appendix\osi7.png" style="zoom:50%;" />
 
-
+<img src="appendix\network.png" style="zoom:75%;" />
 
 ## IP
 
-
+简介：
 
 ## TCP
 
-
+简介：面向连接、可靠的、基于虚电路的、传输协议，适合大量数据传输，慢
 
 ### 三次握手
 
@@ -136,6 +140,44 @@ ssize_t sendmsg(int sockfd, const struct msghdr *msg, int flags);
 
 
 
+> **附tcpdump抓包：**
+>
+> ![](appendix\3s4w.png)
+
+
+
+> ### **TCP/UDP：**
+>
+> | 协议 | 连接方式   | 可靠性                                 | 内容                   |
+> | ---- | ---------- | -------------------------------------- | ---------------------- |
+> | TCP  | 面向连接   | 可靠（序号、重传、流量控制、拥塞控制） | 面向字节流，可分割重组 |
+> | UDP  | 面向无连接 | 不保证可靠，尽力传输                   | 面向数据报             |
+>
+> 
+>
+> ### **三次握手？**
+>
+> 避免**服务器到客户机的ACK**（第三次握手）延迟或丢失，导致**服务器等待数据**，**客户机**未收到ack，**不发送数据**，造成**服务器**端资源**浪费**
+>
+> 
+>
+> ### **四次挥手？**
+>
+> 被动方将“**确认对方关闭**”（第二次挥手）的ack和自己“**关闭己方连接**”（第三次挥手）的两个操作分两次进行（也会出现合并的情况，消息个数4->3）
+>
+> 
+>
+> ### **TIME_WAIT状态？**
+>
+> 防止**第四次挥手ACK延迟或丢失**，对端消息超时再次发送FIN消息时，tcp连接已断开，返RST消息导致对端进入错误状态；第四次挥手ACK发送之后**等待2MSL**（Maximum Segment Life）**再关闭**tcp连接，则可以正确收到对端超时重发的FIN消息。
+>
+> 
+>
+> ### **状态转换？**
+>
+> - 客户端：SYN_SENT -> ESTABLISHED -> FIN_WAIT_1 -> FIN_WAIT_2 -> TIME_WAIT
+> - 服务端：LISTEN -> SYN_RCVD -> ESTABLISHED -> CLOSE_WAIT -> LAST_ACK -> CLOSED
+
 
 
 ## HTTP
@@ -148,5 +190,27 @@ ssize_t sendmsg(int sockfd, const struct msghdr *msg, int flags);
 
 *参考资料：*
 
-- *UNIX高级环境编程 P487*
-- *<https://www.bilibili.com/video/BV1Xp4y1S7BL>*
+- https://www.bilibili.com/video/av370988107?p=3
+- https://www.cnblogs.com/xiaoYu3328/p/5005003.html
+
+
+
+
+
+# 高级IO
+
+
+
+## 非/阻塞IO
+
+
+
+## 多路复用
+
+### poll
+
+### epoll
+
+
+
+## 异步IO
