add cpp and data structure

--- a/面试问题.md
+++ b/面试问题.md
@@ -2,14 +2,23 @@
 - 给定一个二叉树，返回其按层次遍历的节点值
 - 图上的深度优先遍历算法
 - 二叉树的非递归遍历
-- 哈希表解决冲突的方式，装载因子
+- 哈希表解决冲突的方式，装载因子（load factor）
+    - 开放地址法（哈希值加增量，线性探测，二次探测，伪随机数探测法）
+    - 再哈希法（换第二个哈希函数）
+    - 链地址法（链表连接）
 - 排序算法，快速排序、堆排序
+    - 快速排序：每一轮排序将pivot置于正确的位置，左右分别都小于或者大于pivot，递归排序左右序列
+    - 通过构造大小顶堆，不断pop堆顶并调整堆，使得输出有序
 - 判断单链表是否有环
+    - 快慢指针
 - 如何判断两个单链表是否相交，是否有环（分3种情况）
+    - 两指针遍历并交换遍历，判断是否有相同的节点；
 - 区间查询，线段树问题
         给你一些数，组成一个序列，如[1 4 2 3]，有两种操做: 操作一:给序列的第i个数加上X (X可以为负数) 操作二:询问序列中最大的数是什么? 格式query(start, end)，表示区间[start, end]内，最大值是多少?
 - topK问题以及动态的topK问题
+    - 全局排序<局部排序**冒泡**<单个排序**堆排**<减治法**快排**
 - 内存限制在2G，100亿个int8类型的数字排序
+    - map reduce
 - 内存限制在2G，100亿个int64类型的数字排序
 - 单链表反转（链表有环）
 - 给定一个整数，求二进制表示中1的个数；给定一个浮点数呢
@@ -17,6 +26,8 @@
 
 Golang
 - 哈希表，解决哈希冲突的方法，什么时候扩容，扩容的方案
+  - **load factor 6.5**，触发扩容至**2倍**，访问旧桶时触发**增量迁移**到新桶
+  -  使用了**太多溢出桶**，触发创建**新的更大的溢出桶**保存数据
 - interface{}和[]interface{}区别
 - channel相关
 - goroutine调度器
@@ -25,11 +36,17 @@ Golang
 
 操作系统：
 - 进程、线程、协程介绍
+  - **进程有独立的内存空间，进程间切换开销大，但稳定安全，系统资源分配和调度基本单位**
+  - **线程只拥有必不可少的少量资源（栈、寄存器、虚拟内存、fd），与同进程内线程共享资源，CPU调度和分派的基本单位**
+  - **协程是轻量级线程，有自己的寄存器上下文和栈，上下文切换最快；**
 - 进程间通信方式，system v语义下，信号量、消息队列、共享内存，优缺点
+  - **进程：管道，消息队列，共享内存，信号量**
+  - **线程：锁，条件变量，内存屏障**
 - 孤儿进程和僵尸进程出现的情况，原因，危害
-僵尸进程：进程终止时，1）程序必须由外部杀死（通过发送SIGTERM或SIGKILL信号）；进程的父进程在子进程终止时必须调用wait4系统调用，向内核证实父进程已经确认子进程的终结。
+僵尸进程：进程终止时，1）程序必须由外部杀死（通过发送**SIGTERM或SIGKILL**信号）；进程的**父进程**在子进程终止时必须**调用wait4系统调用**，向内核证实父进程已经确认子进程的终结。
 - 并发编程的模型，锁和多线程  
 - io多路复用，select、poll、epoll
+  - 
 - 堆和栈的区别
 - shell命令（基础命令、抓包命令、lsof、ip a、netstat、strace命令、查看内存使用、网络情况、端口）
 rm一个文件之后，文件是否被删除
@@ -37,7 +54,6 @@ rm一个文件之后，文件是否被删除
 - docker 技术与虚拟机技术有何不同
 - 什么是半虚拟化
 - k8s相关的知识（基本命令、服务管理、文件拷贝）
-
 - 创建子进程的方式
 - 一个进程中线程崩了，该进程会崩溃吗？为什么
 - 进程状态，什么情况下sleep的进程不能被唤醒，SIGKILL
@@ -47,8 +63,10 @@ rm一个文件之后，文件是否被删除
 
 网络：
 - TCP协议相关3次握手，4次挥手，TCP状态转移，什么时候出现TIME_WAIT
+  - **第四次挥手之后出现TIME_WAIT，两个MSL，保证对端在没有收到第四次挥手消息触发消息重发时本端能正确处理请求；**
 - IP协议相关
 - 短链接的原理。如t.cn如何映射到一个真正的域名。
+  - **短链接通过重定向到另一个完整的长链接上，一般通过长链接做哈希或者使用发号器实现转换**
 - SQL注入，SQL盲注
 - 几种XSS
 - 软件的破解逆向
@@ -57,25 +75,63 @@ rm一个文件之后，文件是否被删除
 数据库相关：
 - 事务四大特性（ACID）
 
+  -  原子性(atomic)：一系列的操作具有不可分割性，要么完全执行，要么完全不执行。
+  - 一致性(consistency)：操作的前后满足同样的规则(约束条件）。
+  -  隔离性(isolation)：在事务运行的过程中。事务内的数据对外的可见性和可操作性（必需由数据库的支持）
+  - 稳定性(durability)：保证数据在事务的操作一旦提交完成，就是永久性存储的。
+
 - 数据库隔离级别，每个级别会引发什么问题，mysql默认是哪个级别
+
+  - repeatable read
+
 - 有哪些锁（乐观锁悲观锁），select时怎么加排它锁
+
 - MYSQL的两种存储引擎区别（事务、锁级别等等），各自的适用场景
+
+  - **MyISAM：表锁，适用于大量SELECT**
+  - **InnoDB：支持事务、行锁、索引、外键，适用于大量INSERT和UPDATE**
+
 - 数据库的优化（从sql语句优化和索引两个部分回答）
+
 - 索引有B+索引和hash索引，各自的区别
+
 - B+索引数据结构，和B树的区别7
+
 - 索引的分类（主键索引、唯一索引），最左前缀原则，哪些情况索引会失效
+
 - 聚集索引和非聚集索引区别。
 
 - 关系型数据库和非关系型数据库区别
+
 - 了解nosql
+
 - 数据库三范式，根据某个场景设计数据表（可以通过手绘ER图）
+
 - 数据库的主从复制
+
 - 使用explain优化sql和索引
+
+  - 
+
 - long_query怎么解决
+
+  - 开启慢查询日志，分析哪些查询语句超时
+
+    ```mysql
+    set global slow_query_log='ON'; 
+    set global slow_query_log_file='/usr/local/mysql/data/slow.log';
+    set global long_query_time=1;
+    ```
+
+    
+
 - 内连接、外连接、交叉连接、笛卡儿积等
+
+- like语句中可以使用哪些通配符。
 
 Redis:
 - redis数据结构由哪些
+- Redis 为什么是单线程的？
 - redis队列应用场景
 
 分布式系统：
@@ -121,7 +177,6 @@ Python相关面试题：
 15.什么是猴子补丁？
 16.在 Python 中是如何管理内存的？
 17.当退出 Python 时是否释放所有内存分配？
-
 
 系统及工具知识
 linux系统及shell工具
@@ -200,17 +255,7 @@ python
  • TCP和UDP区别。优缺点及适用场景。
 机器/深度学习
  • 机器学习可以解决哪些问题。回归类
-数据库
- • redis有哪些数据结构
-字符串String、字典Hash、列表List、集合Set、有序集合SortedSet
- • Redis 为什么是单线程的？
- • 事务的特征是指什么（acid)
-１. 原子性(atomic)：一系列的操作具有不可分割性，要么完全执行，要么完全不执行。
-２. 一致性(consistency)：操作的前后满足同样的规则(约束条件）。
-３. 隔离性(isolation)：在事务运行的过程中。事务内的数据对外的可见性和可操作性（必需由数据库的支持）
-４. 稳定性(durability)：保证数据在事务的操作一旦提交完成，就是永久性存储的。
- • 关系型表结构：student(id, name, class, age, sex)，统计各班级的学生数目。
- • like语句中可以使用哪些通配符。
+
 智力题
  • 已知一随机发生器，产生0的概率是p，产生1的概率是1-p，现在要你构造一个发生器，使得它产生0和1的概率均为1/2
  • 已知一随机发生器，产生的数字的分布不清楚，现在要你构造一个发生器，使得它产生0和1的概率均为1/2。
