add sort alogrithm

--- a/数据结构与算法/排序算法.md
+++ b/数据结构与算法/排序算法.md
@@ -4,40 +4,78 @@
 
 
 
-| 排序算法 | 平均时间复杂度 |
-| :------: | :------------: |
-| 冒泡排序 |     O(n2)      |
-| 选择排序 |     O(n2)      |
-| 插入排序 |     O(n2)      |
-| 希尔排序 |    O(n1.5)     |
-| 快速排序 |   O(N*logN)    |
-| 归并排序 |   O(N*logN)    |
-|  堆排序  |   O(N*logN)    |
-| 基数排序 |   O(d(n+r))    |
+| 排序算法 | 平均时间复杂度 | 稳定 |
+| :------: | :------------: | ---- |
+| 冒泡排序 |     O(n2)      |      |
+| 选择排序 |     O(n2)      |      |
+| 插入排序 |     O(n2)      |      |
+| 希尔排序 |    O(n1.5)     |      |
+| 快速排序 |   O(N*logN)    | 否   |
+| 归并排序 |   O(N*logN)    |      |
+|  堆排序  |   O(N*logN)    |      |
+| 基数排序 |   O(d(n+r))    |      |
 
 
 
-冒泡排序
+**冒泡排序**：每趟将未排序部分从低到高依次比较大小并交换，将最大的数据交换到最右
+
+```C++
+void bubbleSort(int *a, int n) {
+    for (int i = 0; i < n-1; i ++) {
+        int flag=0;
+        for (int j = 0; j < n-i-1; j++) {
+            if (a[j] > a[j+1]) {
+                swap(a[j], a[j+1]);
+                flag = 1;
+            }
+        }
+        if (flag == 0) break;
+    }
+}
+```
+
+**快速排序**：先选取pivot并用pivot将序列按左小右大划分，递归执行左右未排序序列
+
+```c++
+int partition(int *array, int left, int right) {
+    int pivot = array[left];
+    while (left < right) {
+        while (left < right && array[right] >= pivot) {
+            right --;
+        }
+        array[left] = array[right];
+        while (left < right && array[left] < pivot) {
+            left ++;
+        }
+        array[right] = array[left];
+    }
+    array[left] = pivot;
+    return left;
+}
+
+void qsort(int *array, int left, int right) {
+    if (left < right) {
+        int p = partition(array, left, right);
+        qsort(array, left, p-1);
+        qsort(array, p+1, right);
+    }
+    
+}
+```
+
+**归并排序**：
 
 
 
-快速排序
+**选择排序**：每趟从未排序部分，选择最小的数据与未排序的第一个位置数据交换
 
 
 
-归并排序
+**插入排序**：每趟选择未排序部分的第一个位置数据，依次和已排序部分比较，直到找到位置
 
 
 
-选择排序
-
-
-
-插入排序
-
-
-
-堆排序
+**堆排序**：构造大、小顶堆
 
 
 
@@ -54,3 +92,4 @@
 https://blog.csdn.net/MLcongcongAI/article/details/88081244
 
 https://www.jianshu.com/p/7c13bfff2a94
+
