--- a/数据结构与算法/排序算法.md
+++ b/数据结构与算法/排序算法.md
@@ -6,14 +6,14 @@
 
 | 排序算法 | 平均时间复杂度 | 稳定 |
 | :------: | :------------: | ---- |
-| 冒泡排序 |     O(n2)      |      |
+| 冒泡排序 |     O(n2)      | 是   |
 | 选择排序 |     O(n2)      |      |
-| 插入排序 |     O(n2)      |      |
+| 插入排序 |     O(n2)      | 是   |
 | 希尔排序 |    O(n1.5)     |      |
-| 快速排序 |   O(N*logN)    | 否   |
-| 归并排序 |   O(N*logN)    |      |
+| 快速排序 |   O(N*logN)    |      |
+| 归并排序 |   O(N*logN)    | 是   |
 |  堆排序  |   O(N*logN)    |      |
-| 基数排序 |   O(d(n+r))    |      |
+| 基数排序 |   O(d(n+r))    | 是   |
 
 
 
@@ -79,9 +79,13 @@ void qsort(int *array, int left, int right) {
 
 
 
-计数排序 vs 桶排序 vs 基数排序
+**非比较排序：计数排序 vs 桶排序 vs 基数排序**
 
+计数排序：通过扫描数据并将数据丢入step为1的桶中，再遍历桶还原序列；
 
+桶排序：step>1的计数排序
+
+基数排序：基于数据个位，十位，百位等进行多轮排序的计数排序；
 
 ------
 
